# FinSight

./: .gitignore  FinSight.sln  README.md  demo-upload.cs
.github/workflows/: azure-static-web-apps-ashy-forest-0c5f68010.yml  azure-static-web-apps-mango-stone-09a94e910.yml  master_finsight-api-cw-2026.yml
Databricks/: README.md
Databricks/notebooks/: 01_bronze_ingest_operational_data.py  01_bronze_transactions_ingest.py  02_silver_clean_and_standardize.py  02_silver_transactions_clean.py  03_gold_customer_account_analytics.py  03_gold_customer_account_summary.py  04_reporting_views_and_exports.py
Databricks/sample-data/: accounts_sample.csv  customers_sample.csv  data-flow.md  gold_customer_account_summary.csv  gold_transaction_risk_summary.csv  loan_applications_sample.csv  reporting_portfolio_summary.csv  transactions_sample.csv
Databricks/sql/: create_gold_views.sql  (+1 more)
FinSight.Api/: FinSight.Api.csproj  Program.cs  appsettings.json
FinSight.Core/: FinSight.Core.csproj
FinSight.Data/: FinSight.Data.csproj
FinSight.ML/: Dockerfile  README.md  pyproject.toml
FinSight.ML/app/: main.py
FinSight.ML/app/api/: health.py
FinSight.ML/tests/: test_health.py
FinSight.Tests/: FinSight.Tests.csproj
FinSight.Web/: .env.production.example  index.html  package-lock.json  package.json  tsconfig.json
docs/: AZURE_DEPLOYMENT.md  ai-guardrail-configuration.md  finsight-ai-agent-pipeline.md  ml-ai-platform-foundation.md
scripts/: Add-FinSight-AgentPipeline.ps1  Add-FinSight-AgenticAiFeatures.ps1  Apply-FinSight-MlAi.ps1  Build-FinSight.ps1
(+205 files in other folders)
