[project]
name = "finsight-ml"
version = "0.1.0"
description = "FinSight machine learning and MLOps platform service"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "pydantic>=2.10,<3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "httpx>=0.28,<1.0",
    "ruff>=0.9,<1.0",
    "mypy>=1.14,<2.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
